Add quote to file

--- a/_posts/0000-01-02-Chaitri.md
+++ b/_posts/0000-01-02-Chaitri.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-This is the second slide!
+"Today is a gift, that's why its called the present."
 Use the left arrow to go back!
